# edge2vec

./: .travis.yml  README.md  setup.cfg  setup.py
data/: Untitled.ipynb  matrix.txt  vector.txt
src/edge2vec/: __init__.py  edge2vec.py  math.py  transition.py  transition_cli.py  utils.py
