##########################
# Setup.py Configuration #
##########################
[metadata]
name = edge2vec
version = 0.0.1-dev
description = Involving edge semantics into node embedding
long_description = file: README.rst
long_description_content_type = text/markdown

url = https://github.com/RoyZhengGao/edge2vec

# Author information
author = Charles Tapley Hoyt
author_email = charles.hoyt@scai.fraunhofer.de
maintainer = Charles Tapley Hoyt
maintainer_email = charles.hoyt@scai.fraunhofer.de

# License Information
license = BSD 3-Clause
license_file = LICENSE

# Search tags
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3 :: Only

[options]
install_requires =
    numpy
    pandas
    scipy
    sklearn
    gensim
    networkx
    matplotlib
    tqdm

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.6

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    edge2vec-transition = edge2vec.transition:main
    edge2vec = edge2vec.edge2vec:main
